--- a/less/ff-overrides.less
+++ b/less/ff-overrides.less
@@ -1,3 +1,14 @@
+@media only screen and (max-width: 479px) {
+  .navbar-header {
+    .name {
+      max-width: calc(~"100vw - 140px");
+
+      font-size: 1.2em;
+      padding-top: 12px;
+    }
+  }
+}
+
 // Article header spacing
 .node {
   header {
